<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addSpot"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_showMap"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_all"
        android:title="@string/menu_showAllSpots"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_favorites"
        android:title="@string/menu_showFavoriteSpots"
        android:icon="@drawable/star_border"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_visited"
        android:title="@string/menu_showVisitedSpots"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_showSettings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:visible="true"
        app:showAsAction="never" />
</menu>