<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_deleteSpot"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_save"
        android:title="@string/menu_saveSpot"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelNewSpot"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/share_spot"
        android:title="@string/menu_shareNewSpot"
        android:visible="false"
        app:showAsAction="always" />

</menu>