<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archaeologicalfieldwork.views.settings.SettingsView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/text_current_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_current_mail"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_new_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_new_mail"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_mail" />

        <TextView
            android:id="@+id/current_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_current_email"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_current_mail" />

        <EditText
            android:id="@+id/new_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_new_e_mail"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_new_mail"
            app:layout_constraintTop_toBottomOf="@+id/text_new_mail" />

        <Button
            android:id="@+id/btnSetNewMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_set_new_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_mail" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSetNewPassword" />

        <TextView
            android:id="@+id/text_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_new_password"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSetNewMail" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_new_password"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_new_password"
            app:layout_constraintTop_toBottomOf="@+id/text_new_password" />

        <Button
            android:id="@+id/btnSetNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_set_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password" />

        <TextView
            android:id="@+id/text_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_statistics"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/text_number_all_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_number_of_spots"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_statistics" />

        <TextView
            android:id="@+id/text_number_favorite_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_number_of_favorite_spots"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_number_all_spots"
            app:layout_constraintTop_toBottomOf="@+id/text_number_all_spots" />

        <TextView
            android:id="@+id/text_number_visited_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_number_of_visited_spots"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_number_all_spots"
            app:layout_constraintTop_toBottomOf="@+id/text_number_favorite_spots" />

        <TextView
            android:id="@+id/number_favorite_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/default_zeros_statistics"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_number_favorite_spots"
            app:layout_constraintStart_toEndOf="@+id/text_number_favorite_spots"
            app:layout_constraintTop_toTopOf="@+id/text_number_favorite_spots" />

        <TextView
            android:id="@+id/number_all_spots"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/default_zeros_statistics"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_number_all_spots"
            app:layout_constraintStart_toStartOf="@+id/number_favorite_spots"
            app:layout_constraintTop_toTopOf="@+id/text_number_all_spots" />

        <TextView
            android:id="@+id/number_visited_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_zeros_statistics"
            app:layout_constraintBottom_toBottomOf="@+id/text_number_visited_spots"
            app:layout_constraintStart_toStartOf="@+id/number_favorite_spots"
            app:layout_constraintTop_toTopOf="@+id/text_number_visited_spots"
            android:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>