<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_notespopup_NotesSpotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_notespopup_Spot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notespopup_NotesSpotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_notespopup_spottitle_placeholder"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_notespopup_NotesSpotTitle"
        app:layout_constraintTop_toTopOf="@+id/text_notespopup_NotesSpotTitle" />

    <TextView
        android:id="@+id/text_notespopup_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_notespopup_notes"
        app:layout_constraintStart_toStartOf="@+id/text_notespopup_NotesSpotTitle"
        app:layout_constraintTop_toBottomOf="@+id/text_notespopup_NotesSpotTitle" />

    <EditText
        android:id="@+id/notespopup_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/text_notespopup_notesHint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notespopup_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>